<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.example</groupId>
    <artifactId>spatial</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>spatial</name>
    <description>Demo project for Spring Boot spatial</description>
    <properties>
        <java.version>8</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.locationtech.spatial4j</groupId>
            <artifactId>spatial4j</artifactId>
            <version>0.8</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/us.ihmc/euclid-shape -->
        <dependency>
            <groupId>us.ihmc</groupId>
            <artifactId>euclid-shape</artifactId>
            <version>0.20.0</version>
        </dependency>

        <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>1.19.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.sf.geographiclib/GeographicLib-Java -->
<!--        <dependency>-->
<!--            <groupId>net.sf.geographiclib</groupId>-->
<!--            <artifactId>GeographicLib-Java</artifactId>-->
<!--            <version>1.42</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.locationtech.proj4j</groupId>-->
<!--            <artifactId>proj4j</artifactId>-->
<!--            <version>${proj4j.version}</version>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/org.osgeo/proj4j -->
<!--        <dependency>-->
<!--            <groupId>org.osgeo</groupId>-->
<!--            <artifactId>proj4j</artifactId>-->
<!--            <version>0.1.0</version>-->
<!--        </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.locationtech.proj4j/proj4j -->
        <dependency>
            <groupId>org.locationtech.proj4j</groupId>
            <artifactId>proj4j</artifactId>
            <version>1.3.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.geotools/geotools -->
<!--        <dependency>-->
<!--            <groupId>org.geotools</groupId>-->
<!--            <artifactId>geotools</artifactId>-->
<!--            <version>16.1</version>-->
<!--            <type>pom</type>-->
<!--        </dependency>-->


        <!-- https://mvnrepository.com/artifact/org.locationtech.proj4j/proj4j-epsg -->
        <dependency>
            <groupId>org.locationtech.proj4j</groupId>
            <artifactId>proj4j-epsg</artifactId>
            <version>1.3.0</version>
        </dependency>



        <!-- https://mvnrepository.com/artifact/org.opensextant/geodesy -->
        <dependency>
            <groupId>org.opensextant</groupId>
            <artifactId>geodesy</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.locationtech.geotrellis/geotrellis-geotools -->
<!--        <dependency>-->
<!--            <groupId>org.locationtech.geotrellis</groupId>-->
<!--            <artifactId>geotrellis-geotools_2.12</artifactId>-->
<!--            <version>3.5.1</version>-->
<!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/com.google.maps/google-maps-services -->
        <dependency>
            <groupId>com.google.maps</groupId>
            <artifactId>google-maps-services</artifactId>
            <version>2.2.0</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.locationtech.jts</groupId>-->
<!--            <artifactId>jts-core</artifactId>-->
<!--            <version>1.17.0</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
            <version>2.7.8</version>
        </dependency>

    </dependencies>


    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>


    <!--    <repositories>-->
<!--        <repository>-->
<!--            <id>local</id>-->
<!--            <url>file://${user.home}/.m2/repository</url>-->
<!--        </repository>-->
<!--    </repositories>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
